--- a/config
+++ b/config
@@ -8,18 +8,31 @@
   suppress_multiple_term_dialog = True
   borderless = True
   enabled_plugins = CustomCommandsMenu, LaunchpadCodeURLHandler, APTURLHandler, MavenPluginURLHandler, LaunchpadBugURLHandler
-  title_transmit_bg_color = "#d30102"
+  title_transmit_bg_color = "#01d3b7"
   tab_position = bottom
 [keybindings]
+  cycle_prev = <Primary><Shift>Tab
+  toggle_zoom = <Alt>Return
+  edit_window_title = None
+  cycle_next = <Primary>Tab
+  go_up = <Alt>k
   switch_to_tab_10 = None
-  go_down = <Alt>Up
-  switch_to_tab_1 = None
   next_tab = <Primary><Shift>Tab
+  go_prev = None
   prev_tab = <Primary>Tab
+  go_down = <Alt>j
+  switch_to_tab_5 = None
+  switch_to_tab_2 = None
+  go_right = <Alt>l
+  switch_to_tab_1 = None
+  go_left = <Alt>h
+  go_next = None
+  switch_to_tab_4 = None
+  switch_to_tab_3 = None
 [profiles]
   [[default]]
     scrollbar_position = hidden
-    palette = "#073642:#dc322f:#859900:#67fffe:#ff97e5:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
+    palette = "#073642:#ffeca3:#859900:#67fffe:#ff97e5:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
     visible_bell = True
     background_image = /home/micl/Bilder/background.png
     background_darkness = 0.73
@@ -40,18 +53,45 @@
       parent = ""
       size = 1242, 597
     [[[child1]]]
-      position = 623
+      position = 621
       type = HPaned
       order = 0
       parent = child0
+      size = 1242, 597
+    [[[child2]]]
+      position = 298
+      type = VPaned
+      order = 0
+      parent = child1
+      size = 1242, 597
+    [[[child5]]]
+      position = 298
+      type = VPaned
+      order = 1
+      parent = child1
+      size = 1242, 597
     [[[terminal3]]]
       profile = default
       type = Terminal
+      order = 0
+      parent = child2
+      size = 1242, 597
+    [[[terminal4]]]
+      profile = default
+      type = Terminal
       order = 1
-      parent = child1
-    [[[terminal2]]]
+      parent = child2
+      size = 1242, 597
+    [[[terminal7]]]
+      profile = default
+      type = Terminal
+      order = 1
+      parent = child5
+      size = 1242, 597
+    [[[terminal6]]]
       profile = default
       type = Terminal
       order = 0
-      parent = child1
+      parent = child5
+      size = 1242, 597
 [plugins]
